--- a/FinKont_examprep.Rmd
+++ b/FinKont_examprep.Rmd
@@ -1,101 +1,54 @@
 ---
-title: "Homework (QRM)"
+title: "Exam-prep (FinKont)"
+author: "Joakim Bilyk"
+date: "`r Sys.Date()`"
+header-includes:
+   - \usepackage{wrapfig}
+   - \usepackage{graphics}
 output:
   html_document:
-    toc: false
-    toc_float: true
+    toc: no
+    code_folding: hide
+  pdf_document:
+    toc: yes
 ---
 
+```{r, setup,include=FALSE}
+library(knitr)
+if (knitr::is_latex_output()) {
+  knit_hooks$set(wrapf = function(before, options, envir) {
+  if (!before) {
+    output <- vector(mode = "character", length = options$fig.num + 1)
+
+    for (i in 1:options$fig.num) {
+      output[i] <- sprintf("\\includegraphics{%s}", fig_path(number = i))
+    }
+
+    output[i+1] <- "\\end{wrapfigure}"
+    output <- c("\\begin{wrapfigure}{R}{0.5\\textwidth}",output)
+    if (length(output)>= 3) {
+      return(paste(output, collapse = ""))
+    }
+  }
+})
+  knitr::opts_chunk$set(
+    fig.show = 'hide',
+    echo = FALSE
+  )
+} else {
+  knitr::knit_hooks$set(wrapf = function(before, options, envir) {})
+  knitr::opts_chunk$set(
+    out.extra = 'style="float:right; padding:10px"',
+    out.width= "50%"
+  )
+}
+```
+
+```{r, include=FALSE, results = 'hide'}
+library(ggplot2)
+library(dplyr)
+#rmarkdown::render(input = "FinKont_homework.Rmd", output_format = "pdf_document")
+```
+
+
 # Introduction
-
-# Weeks {.tabset}
-
-## Week 1
-
-### Material
-
-MFE refers to the book by McNeil, Frey, and Embrechts, while HL refers to the notes by Hult and Lindskog posted on Absalon.
-
- * Introduction; risk factors and loss distributions; coherent risk measures: MFE Ch. 2.
- * VaR and expected shortfall: MFE Ch. 2, particularly Sec. 2.3. (For discussion of confidence bounds, see HL notes.)
-
-### Theory
-
-### Exercises
-
-## Week 2
-
-### Material
-
-MFE refers to the book by McNeil, Frey, and Embrechts, while HL refers to the notes by Hult and Lindskog posted on Absalon.
-
- * Var-Cov method, simulation, importance sampling and bootstrap. For the Var-Cov method, see MFE Sec. 9.2. For importance sampling and bootstrap, see the supplementary reading in Absalon.
- * Extreme value theory: MFE Ch. 5 or alternative reading in HL (suggested for this part).
-
-### Theory
-
-### Exercises
-
-## Week 3
-
-### Material
-
-MFE refers to the book by McNeil, Frey, and Embrechts, while HL refers to the notes by Hult and Lindskog posted on Absalon.
-
- * Spherical and elliptical distributions: MFE Sec. 6.3.
- * Spherical and elliptical distributions, cont.; introduction to copulas.
-
-### Theory
-
-### Exercises
-
-## Week 4
-
-### Material
-
-MFE refers to the book by McNeil, Frey, and Embrechts, while HL refers to the notes by Hult and Lindskog posted on Absalon.
-
- * Copulas: MFE Sec. 7.1-7.5 (Sklar's theorem, Frechet bounds).
- * Copulas cont. (Transformations; examples; Archimedean copulas).
-
-### Theory
-
-### Exercises
-
-## Week 5
-
-### Material
-
-MFE refers to the book by McNeil, Frey, and Embrechts, while HL refers to the notes by Hult and Lindskog posted on Absalon.
-
- * Copulas cont. (simulating Archimedean copulas, statistical methods, measures of dependence).
- * Credit risk: the Merton model. MFE Ch. 10, particularly Sec. 10.3. [This lecture will only last two hours.]
-
-### Theory
-
-### Exercises
-
-## Week 6
-
-### Material
-
-MFE refers to the book by McNeil, Frey, and Embrechts, while HL refers to the notes by Hult and Lindskog posted on Absalon.
-
- * Portfolio credit risk: MFE Ch. 11, specifically Sections 11.1-11.3.
- * Portfolio credit risk, cont. [This lecture will only last two hours.]
-
-### Theory
-
-### Exercises
-
-## Week 7
-
-### Material
-
-MFE refers to the book by McNeil, Frey, and Embrechts, while HL refers to the notes by Hult and Lindskog posted on Absalon.
-
- * Intro. to operational risk. Stochastic processes in risk management: stochastic models for operational risk; financial time series models. Connections to non-life insurance models and estimates (last lecture).
-
-### Theory
-
-### Exercises
